SDK-365: fixed memory leak